# aa-models-tracker

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  rss_writer.py  scraper.py  storage.py
.github/workflows/: update-feed.yml
data/: feed.xml  history.jsonl  models.json
scripts/: push-gitea.sh
src/models_track/: __init__.py  bean_reporter.py  cli.py  report.py  rss.py  scraper.py  storage.py
