[project]
name = "models-track"
version = "0.1.0"
description = "Track top AI models from Artificial Analysis leaderboard"
authors = [
    {name = "Andrey"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "feedgen>=1.0.0",
]

[project.scripts]
models-track = "models_track.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "models_track", from = "src"}]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
